fixed right white space

--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-html, body {
-	width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0;
-}
-
 body{
 	margin: 0px;
 	padding-bottom: -11px;
@@ -35,6 +28,7 @@ header{
 	text-align: center;
 	border-bottom: 3px solid;
 	border-color: #3277b3;
+	display: none;
 }
 
 header #ico {
@@ -50,7 +44,9 @@ header ul {
     margin: 0;
     padding: 0;
     position: relative;
-    float: left; display: block; left: 50%; 
+    float: left;
+    display: block;
+    left: 50%; 
 }
 
 header li {
@@ -117,21 +113,15 @@ header li a:hover {
 	list-style: none;
     margin: 0;
     padding: 0;
-    position: relative;
-    float: left; display: block; left: 50%;
     cursor: pointer;
 }
 
 #title li {
-	position: relative;
-	float: left;
-	display: block;
-	right: 50%;
+	display: inline;
 }
 
 #title li a {
 	font-size: 30px;
-	display: block;
     color: #ffffff;
     padding: 15px 20px;
     text-decoration: none;
